--- a/.gitconfig
+++ b/.gitconfig
@@ -9,3 +9,4 @@
     cp = cherry-pick 
     cm = commit
     ps = push -u origin HEAD
+    graph = log --graph --date=short --pretty=\"format:%C(yellow)%h %C(cyan)%ad %C(green)%an%Creset%x09%s %C(red)%d%Creset\"
